sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: not found: value c
    c=0
    ^AlgCombSort:9: error: not found: value i
    i=0
    ^AlgCombSort:10: error: not found: value i
    while ((i+ecart)< lgr){
            ^AlgCombSort:11: error: not found: value i
      if (plusPetit(i+ecart:Int, i:Int)) {
                    ^AlgCombSort:11: error: not found: value i
      if (plusPetit(i+ecart:Int, i:Int)) {
                                 ^AlgCombSort:12: error: not found: value i
        echange(i:Int, i+ecart:Int)
                ^AlgCombSort:12: error: not found: value i
        echange(i:Int, i+ecart:Int)
                       ^AlgCombSort:13: error: not found: value i
        i=i+1
        ^AlgCombSort:14: error: not found: value c
        c=1
        ^AlgCombSort:17: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  } while (ecart>1 || c=1)
                   ^AlgCombSort:17: error: not found: value c
  } while (ecart>1 || c=1)
                      ^