sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var lgr:Int=getNombreValeurs()
  var ecart:Int= lgr
  do {
    c=0
    if (ecart>1) {
      ecart = (ecart.toDouble / 1.3).toInt    }
    i=0
    while ((i+ecart)< lgr){
      if (plusPetit(i+ecart:Int, i:Int)) {
        echange(i:Int, i+ecart:Int)
        i=i+1
        c=1
      }
    }
  } while (ecart>1 || c=1)
}